Setting up Imager Container for face recognition and image manipulation

--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.6.3
 WORKDIR /usr/src/app
 
+RUN apt-get update && apt-get install -y cmake libboost-all-dev
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
