--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - redis
     environment:
       - PORT=8080
+    volumes:
+      - ./dictionary:/go/src/app/dictionary
   scraper:
     build: src
     command: python app.py
@@ -29,7 +31,6 @@ services:
         condition: on-failure
   images:
     build: images
-    command: python image.py
     links:
       - redis
     depends_on:
