--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
