--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
         condition: on-failure
   images:
     build: images
+    command: python test.py
     links:
       - redis
     depends_on:
