--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -1,12 +1,18 @@
 FROM python:3.6.3
 WORKDIR /usr/src/app
 
-RUN apt-get update && apt-get install -y cmake libboost-all-dev
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y build-essential \
+  cmake \
+  pkg-config \
+  libx11-dev \
+  libatlas-base-dev \
+  libgtk-3-dev \
+  libboost-python-dev \
+  libopencv-dev \
+  python-opencv
 
+COPY requirements.txt ./
+RUN pip install -r requirements.txt
 COPY . .
 
-ENV NAME image_manager
-
-CMD ["python", "image.py"]
+RUN python setup.py install
