--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -11,6 +11,14 @@ RUN apt-get update && apt-get install -y build-essential \
   libopencv-dev \
   python-opencv
 
+RUN wget http://dlib.net/files/shape_predictor_68_face_landmarks.dat.bz2
+
+RUN bzip2 -d -v shape_predictor_68_face_landmarks.dat.bz2
+
 COPY requirements.txt ./
+
 RUN pip install -r requirements.txt
+
 COPY . .
+
+CMD python app.py
