--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
     volumes:
       - ./dictionary:/go/src/app/dictionary
       - web-stuff:/go/src/app/dist
-  scraper:
-    build: scraper
+  natlang:
+    build: natlang
     command: python app.py
     depends_on:
       - phantomjs
