--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6.3
-WORKDIR /usr/src/natlang
+WORKDIR /usr/src/scraper
 
 # Intstall this stuff for caching
 COPY requirements.txt ./
@@ -7,7 +7,7 @@ RUN pip install -r requirements.txt
 
 # Codebase
 COPY setup.py ./
-COPY natlang/ ./natlang/.
+COPY scraper/ ./scraper/.
 
 COPY Makefile ./
 RUN make init
@@ -15,4 +15,4 @@ RUN make init
 # Tests and everything else
 COPY . .
 
-ENV NAME natlang
+ENV NAME scraper
