--- a/scraper/Makefile
+++ b/scraper/Makefile
@@ -1,6 +1,5 @@
 init:
-	pip install --no-cache-dir -r requirements.txt
 	python setup.py install
 test:
-	pytest tests
+	python setup.py test
 .PHONY: init test
