--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       - redis-db:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
+    logging:
+      driver: "none"
     deploy:
       replicas: 1
       restart_policy:
