--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ services:
         parallelism: 1
         delay: 10s
   frontend:
+    image: superpolkadance/dailywooffrontend
     build: frontend
     command: npm run build
     volumes:
