--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,18 @@ services:
   messager:
     image: rabbitmq:3.7.2
     hostname: my-rabbit
+    networks:
+      net:
     logging:
       driver: "none"
   phantomjs:
     image: superpolkadance/phantomjs:1.0
+    command: phantomjs --webdriver=8910
+    networks:
+      scrape:
+        aliases:
+          - phantomjs
+          - browser
     logging:
       driver: "none"
     deploy:
@@ -15,8 +23,8 @@ services:
   redis:
     image: redis
     command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - "6379:6379"
+    networks:
+      net:
     volumes:
       - redis-db:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
@@ -30,8 +38,10 @@ services:
     image: superpolkadance/dailywoofweb
     build: web
     command: ./bin/app
-    links:
-      - redis
+    networks:
+      net:
+        aliases:
+          - redis
     ports:
       - "8080:8080"
     depends_on:
@@ -56,9 +66,12 @@ services:
     command: python app.py
     depends_on:
       - redis
-    links:
       - messager
-      - redis
+    networks:
+      net:
+        aliases:
+          - redis
+          - messager
     deploy:
       replicas: 2
       restart_policy:
@@ -70,11 +83,14 @@ services:
     image: superpolkadance/dailywoofimages
     build: images
     command: python app.py
-    links:
-      - redis
-      - messager
+    networks:
+      net:
+        aliases:
+          - redis
+          - messager
     depends_on:
       - redis
+      - messager
     volumes:
       - ./dictionary:/usr/src/app/cow
       - ./config:/usr/src/app/config
@@ -100,10 +116,16 @@ services:
     image: superpolkadance/dailywoofscraper
     build: scraper
     command: python app.py
-    links:
-      - phantomjs:browser
-      - redis
-      - messager
+    depends_on:
+      - phantomjs
+    networks:
+      net:
+        aliases:
+          - redis
+          - messager
+      scrape:
+        aliases:
+          - browser
     deploy:
       replicas: 2
       restart_policy:
@@ -115,5 +137,5 @@ volumes:
   web-stuff:
   redis-db:
 networks:
-  redis:
-  messager:
+  net:
+  scrape:
