--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,7 @@ services:
   scraper:
     image: superpolkadance/dailywoofscraper
     build: scraper
-    command: python app.py
+    command: python3.6 app.py
     depends_on:
       - messager
     networks:
