--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ volumes:
 networks:
   net:
 services:
-  messager:
+  rabbitmq-service:
     image: rabbitmq:3.7.2
     hostname: my-rabbit
     networks:
       net:
-  redis:
+  redis-service:
     image: redis
     command: redis-server
     networks:
@@ -25,7 +25,7 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - redis
+      - redis-service
     environment:
       - PORT=8080
     volumes:
@@ -35,23 +35,18 @@ services:
     build: natlang
     command: python app.py
     depends_on:
-      - redis
-      - messager
+      - rabbitmq-service
     networks:
       net:
-        aliases:
-          - redis
   images:
     image: superpolkadance/dailywoofimages
     build: images
     command: python app.py
     networks:
       net:
-        aliases:
-          - redis
     depends_on:
-      - redis
-      - messager
+      - redis-service
+      - rabbitmq-service
     environment:
       - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
@@ -68,7 +63,7 @@ services:
     build: scraper
     command: python3.6 app.py
     depends_on:
-      - messager
-      - redis
+      - rabbitmq-service
+      - redis-service
     networks:
       net:
