--- a/kubernetes/cronjob.yml
+++ b/kubernetes/cronjob.yml
@@ -8,37 +8,42 @@ spec:
     spec:
       template:
         spec:
+          tolerations:
+            - key: cpu
+              operator: Equal
+              value: power
+              effect: NoSchedule
           containers:
-          - name: natlang
-            image: superpolkadance/dailywoofnlp
-            args:
-              - timeout
-              - 60m
-              - python
-              - app.py
-          - name: scraper
-            image: superpolkadance/dailywoofscraper
-            args:
-              - timeout
-              - 60m
-              - python
-              - app.py
-          - name: images
-            image: superpolkadance/dailywoofimages
-            args:
-              - timeout
-              - 60m
-              - python3.6
-              - app.py
-            env:
-              - name: AWS_ACCESS_KEY_ID
-                valueFrom:
-                  secretKeyRef:
-                    name: aws-creds
-                    key: id
-              - name: AWS_SECRET_ACCESS_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: aws-creds
-                    key: key
+            - name: natlang
+              image: superpolkadance/dailywoofnlp:latest
+              args:
+                - timeout
+                - 60m
+                - python
+                - app.py
+            - name: scraper
+              image: superpolkadance/dailywoofscraper:latest
+              args:
+                - timeout
+                - 60m
+                - python
+                - app.py
+            - name: images
+              image: superpolkadance/dailywoofimages:latest
+              args:
+                - timeout
+                - 60m
+                - python3.6
+                - app.py
+              env:
+                - name: AWS_ACCESS_KEY_ID
+                  valueFrom:
+                    secretKeyRef:
+                      name: aws-creds
+                      key: id.txt
+                - name: AWS_SECRET_ACCESS_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: aws-creds
+                      key: key.txt
           restartPolicy: OnFailure
