--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,14 +39,14 @@ test_scraper:
   script:
     - docker-compose run scraper pytest
 
-release_containers:
-  stage: release
-  script:
-    - docker-compose pull -t $CI_JOB_NAME
-    - docker-compose tag $CI_JOB_NAME latest
-    - docker-compose push
-  only:
-    - master
+# release_containers:
+#   stage: release
+#   script:
+#     - docker-compose pull -t $CI_JOB_NAME
+#     - docker-compose tag $CI_JOB_NAME latest
+#     - docker-compose push
+#   only:
+#     - master
 
 release_front_end:
   stage: release
