--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ sudo: required
 
 before_install:
   - sudo apt-get update
+  - sudo apt-get install python-pip python-dev build-essential
+  - sudo pip install --upgrade pip
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - pip install docker-compose
 
 script:
   - sh test.sh
