--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get install python-pip python-dev build-essential
   - sudo pip install --upgrade pip
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-  - pip install docker-compose
+  - sudo pip install docker-compose
 
 script:
   - bash test.sh
