--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ before_script:
 build:
   stage: build
   script:
+    - docker-compose pull
     - docker-compose build -t $CI_JOB_NAME
 
 test_front_end:
