--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo pip install --upgrade pip
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - sudo pip install docker-compose
+  - docker-compose pull
 
 script:
   - bash test.sh
