--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build:
   stage: build
   script:
     - docker-compose pull
-    - docker-compose build -t $CI_JOB_NAME
+    - docker-compose build
 
 test_front_end:
   stage: test
