--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build:
   script:
     - docker-compose pull
     - docker-compose build
+    - docker-compose tag $CI_JOB_NAME
 
 test_front_end:
   stage: test
