--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ sudo: required
 
 cache:
   apt: true
+  pip: true
 
 before_install:
   - sudo apt-get update
   - sudo apt-get install python-pip python-dev build-essential
-  - sudo pip install --upgrade pip
+  - sudo -H pip install --upgrade pip
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-  - sudo pip install docker-compose
+  - sudo -H pip install docker-compose
   - docker-compose pull
 
 script:
