--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 sudo: required
 
-language: python
-
-python: '3.6'
-
 cache:
   apt: true
-  pip: true
 
 before_install:
+  - sudo apt-get update
+  - sudo apt-get install python-pip python-dev build-essential
+  - sudo pip install --upgrade pip
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - sudo pip install --upgrade docker-compose
   - docker-compose pull
 
 script:
