--- a/kubernetes/rabbitmq-controller.yml
+++ b/kubernetes/rabbitmq-controller.yml
@@ -3,6 +3,7 @@ kind: ReplicationController
 metadata:
   labels:
     component: rabbitmq
+    general: low-power
   name: rabbitmq-controller
 spec:
   replicas: 1
@@ -16,7 +17,7 @@ spec:
       - image: rabbitmq
         name: rabbitmq
         ports:
-        - containerPort: 5672
+          - containerPort: 5672
         resources:
           limits:
             cpu: 100m
