Timeout cronjob consumers
We should really be doing something different than just a cronjob for this

--- a/kubernetes/cronjob.yml
+++ b/kubernetes/cronjob.yml
@@ -18,6 +18,8 @@ spec:
             - name: natlang
               image: superpolkadance/dailywoofnlp:latest
               args:
+                - timeout
+                - "1800"
                 - python
                 - app.py
             - name: scraper
